增加上传测井解释功能，修改冗余代码